testing the configs page nav fixes.. oh god i'm scared

--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,10 @@ defaults:
       type: "food"
     values:
       layout: meal
+
+
+header_files:
+  - about.md
+  - breakfast.md
+  - lunch.md
+  - dinner.md
