config for nav come on girl

--- a/_config.yml
+++ b/_config.yml
@@ -10,3 +10,11 @@ defaults:
       type: "food"
     values:
       layout: meal
+
+
+header_pages:
+  - about.md
+  - breakfast.md
+  - lunch.md
+  - dinner.md
+
